@@ -2221,23 +2221,6 @@ you can say:
 @xref{Size of Displayed Text,,,elisp}.
 @end defun
 
-@c based on lisp/subr-x.el
-@defmac with-buffer-unmodified-if-unchanged &rest body@dots{}
-Evaluate @var{body} like @code{progn}, but change buffer-modified status
-only if buffer text changes.  If the buffer was unmodified before
-execution of BODY, and buffer text after execution of BODY is identical
-to what it was before, ensure that buffer is still marked unmodified
-afterwards.
-
-Note that only changes in the raw byte sequence of the buffer text, as
-stored in the internal representation, are monitored for the purpose of
-detecting the lack of changes in buffer text.  Any other changes that
-are normally perceived as "buffer modifications", such as changes in
-text properties, @code{buffer-file-coding-system}, buffer multibyteness,
-etc. -- will not be noticed, and the buffer will still be marked
-unmodified, effectively ignoring those changes.
-@end defmac
-
 @defun file-attribute-file-identifier
 Return the fields @code{(inodenum device)} as a list from attributes
 generated by @code{file-attributes}.
