@@ -24,6 +24,8 @@
   downstream issue in the doom-modeline package. If a more efficient solution is
   possible, the function will be added back.
 - compat-29: Drop broken function ~string-limit~.
+- compat-29: Drop broken macro ~with-buffer-unmodified-if-unchanged~, which relied
+  on ~buffer-hash~ which does not exist on all supported Emacs versions.
 - compat-29: Add ~pos-bol~ and ~pos-eol~.
 
 * Release of "Compat" Version 29.1.0.1
